# kata-roman-numerals-ocaml

./: .editorconfig  README.md  dune-project  kata_roman_numerals.opam
.devcontainer/: Dockerfile  devcontainer.json
lib/: dune  roman_numerals.ml  roman_numerals.mli
test/: dune  roman_numerals_test.ml
